; ModuleID = '/home/carl/AnghaBench/openssl/crypto/rsa/extr_rsa_ossl.c_rsa_blinding_convert.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/rsa/extr_rsa_ossl.c_rsa_blinding_convert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*, i32*)* @rsa_blinding_convert to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rsa_blinding_convert(i32* %0, i32* %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  %11 = load i32*, i32** %8, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %18

13:                                               ; preds = %4
  %14 = load i32*, i32** %7, align 8
  %15 = load i32*, i32** %6, align 8
  %16 = load i32*, i32** %9, align 8
  %17 = call i32 @BN_BLINDING_convert_ex(i32* %14, i32* null, i32* %15, i32* %16)
  store i32 %17, i32* %5, align 4
  br label %29

18:                                               ; preds = %4
  %19 = load i32*, i32** %6, align 8
  %20 = call i32 @BN_BLINDING_lock(i32* %19)
  %21 = load i32*, i32** %7, align 8
  %22 = load i32*, i32** %8, align 8
  %23 = load i32*, i32** %6, align 8
  %24 = load i32*, i32** %9, align 8
  %25 = call i32 @BN_BLINDING_convert_ex(i32* %21, i32* %22, i32* %23, i32* %24)
  store i32 %25, i32* %10, align 4
  %26 = load i32*, i32** %6, align 8
  %27 = call i32 @BN_BLINDING_unlock(i32* %26)
  %28 = load i32, i32* %10, align 4
  store i32 %28, i32* %5, align 4
  br label %29

29:                                               ; preds = %18, %13
  %30 = load i32, i32* %5, align 4
  ret i32 %30
}

declare dso_local i32 @BN_BLINDING_convert_ex(i32*, i32*, i32*, i32*) #1

declare dso_local i32 @BN_BLINDING_lock(i32*) #1

declare dso_local i32 @BN_BLINDING_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
